--- a/assets/sass/base/_animations.scss
+++ b/assets/sass/base/_animations.scss
@@ -1,9 +1,13 @@
 
 
 @keyframes reveal-article {
+    from {
+        opacity: 0;
+        top: 200px;
+    }
     to {
 		opacity: 1;
-		transform: translateY(0);
+		top: 0;
     }
 }
 
@@ -23,3 +27,5 @@
         transform: translateY(0);
     }
 }
+
+
