--- a/assets/sass/components/_article-snippet.scss
+++ b/assets/sass/components/_article-snippet.scss
@@ -1,4 +1,5 @@
 .snippet {
+	position: relative;
 
 	&__feature-image {
 		margin-bottom: 20px;
@@ -34,6 +35,7 @@
 				color: $hbc-highlight;
 				text-transform: uppercase;
 				text-decoration: none;
+			    font-size: 15px;
 
 				&:after {
 					display: inline-block;
