--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,21 +6,25 @@
 @import '../sass/vendor/normalize';
 @import '../sass/vendor/syntax-highlighting';
 
-// Components
+// base
 @import '../sass/base/common';
 @import '../sass/base/layout';
 @import '../sass/base/typography';
 @import '../sass/base/animations';
+
+// Components
 @import '../sass/components/header';
 @import '../sass/components/footer';
 @import '../sass/components/navigation';
-@import '../sass/components/homepage';
 @import '../sass/components/sidebar';
 @import '../sass/components/article-listing';
-@import '../sass/components/article';
 @import '../sass/components/author-bio';
-@import '../sass/components/categories';
 @import '../sass/components/recirc';
 @import '../sass/components/article-snippet';
-@import '../sass/components/author-page';
-@import '../sass/components/authors-page';
+
+// pages
+@import '../sass/pages/homepage';
+@import '../sass/pages/article-page';
+@import '../sass/pages/categories-page';
+@import '../sass/pages/author-page';
+@import '../sass/pages/authors-page';
