--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -1,47 +1,111 @@
 ---
 layout: default
 ---
+
+{% if paginator.previous_page %}
+<!-- sub page template -->
+<!-- this is the rest of the posts listed with no feature images-->
 <section class="article-listing">
-  {% for post in paginator.posts limit:1 %}
-  <div class="article-listing__featured">
-      {% include article-snippet.html excerpt=true featureImage=true %}
-  </div>
-  {% endfor %}
-  <!-- display the 2nd and 3rd posts in a smaller way-->
-  <div class="article-listing__sub-featured">
-  {% for post in paginator.posts limit:2 offset:1 %}
-      {% include article-snippet.html excerpt=true featureImage=false %}
-  {% endfor %}
-  </div>
-  <!-- this is the rest of the posts listed with no feature images-->
-  <div class="article-listing__remaining">
+    <div class="article-listing__remaining">
     <aside class="featured-topics"><h3 class="featured-topics__title">Featured Topics</h3></aside>
-    {% for post in paginator.posts offset:3 limit:8 %}
+    {% for post in paginator.posts %}
+          {% include article-snippet.html excerpt=true featureImage=false %}
+    {% endfor %}
+    </div>
+</section>
+{% else %}
+<!-- page 1 template -->
+<!-- display the 1st article in a big way-->
+<section class="article-listing">
+    {% for post in paginator.posts limit:1 %}
+    <div class="article-listing__featured">        
+        <section class="snippet" {% if post.image.feature %} style="background: url(
+                {% if post.image.feature contains 'https' or post.image.feature contains 'http' %}{{ post.image.feature }}
+                {% else %}{{ site.url }}{{ site.baseurl }}/assets/images/{{ post.image.feature }}
+                {% endif %}) 50% 50% / 100% no-repeat;"{% endif %}>
+            <h1 class="snippet__title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a></h1>
+            <div class="snippet__meta">
+                <span class="meta__day">{{ post.date | date: "%-d" }}</span>
+                <span class="meta__month">{{ post.date | date: "%b" | upcase }}</span>
+                <span class="meta__year">{{ post.date | date: "%Y" }}</span>
+
+                {% if post.categories.size > 0 %}
+                    {% for cat in site.category %}
+                        {% if cat.name == post.categories.first %}
+                            {% assign featureCategory = cat.name %}
+                        {% endif %}
+                    {% endfor %}
+
+                    {% if post.categories.first == featureCategory %}
+                        <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/category/{{ post.categories.first }}">{{post.categories.first}}</a>
+                    {% else %}
+                        <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
+                    {% endif %}
+                {% endif %}
+
+                {% if post.author != '' %}
+                    {% for authorName in post.author %}
+                        {% assign authorLink = authorName | replace: ' ', '-' | downcase %}
+                        <!-- if author exists in site.authors, create link to author's page -->
+                        {% for a in site.authors %}
+                            {% if a.name == authorName %}
+                            <a class="meta__author-link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">
+                            {% endif %}
+                        {% endfor %}
+                        <!-- render the author name regardless if they're a featured author -->
+                        {{- authorName -}}
+                        <!-- if author exists in site.authors, close link to author's page -->
+                        <!-- add author's job title to give article more clout -->
+                        {% for a in site.authors %}
+                            {% if a.name == authorName %}
+                            </a>{%if a.job-title %}<span class="meta__author-job-title">, {{a.job-title}}</span>{% endif %}
+                            {% endif %}
+                        {% endfor %}
+                        {%- unless forloop.last -%}
+                        <span>,</span>
+                        {% endunless %}
+                    {% endfor %}
+                {% else %}
+                    {{ site.title }}
+                {% endif %}
+            </div>
+        </section>
+    </div>
+    {% endfor %}
+    <!-- display the 2nd and 3rd posts in a smaller way-->
+    <div class="article-listing__sub-featured">
+    {% for post in paginator.posts limit:2 offset:1 %}
         {% include article-snippet.html excerpt=true featureImage=false %}
     {% endfor %}
-  </div>
+    </div>
+    <!-- this is the rest of the posts listed with no feature images-->
+    <div class="article-listing__remaining">
+    <aside class="featured-topics"><h3 class="featured-topics__title">Featured Topics</h3></aside>
+    {% for post in paginator.posts offset:3 limit:8 %}
+          {% include article-snippet.html excerpt=true featureImage=false %}
+    {% endfor %}
+    </div>
 </section>
-
+{% endif %}
 
 <!-- Pagination links -->
 {% if paginator.total_pages > 1 %}
 <section class="pagination">
-{% if paginator.previous_page %}
-    <a class="pagination__link pagination__link--prev" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
-{% endif %}
-
-{% for page in (1..paginator.total_pages) %}
-    {% if page == paginator.page %}
-    <em class="pagination__link pagination__link--current">{{ page }}</em>
-    {% elsif page == 1 %}
-    <a class="pagination__link pagination__link--current" href="{{ '/insights' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
-    {% else %}
-    <a class="pagination__link pagination__link--current" href="{{ '/insights/' | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
+    {% if paginator.previous_page %}
+        <a class="pagination__link pagination__link--prev" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
     {% endif %}
-  {% endfor %}
 
-  {% if paginator.next_page %}
-    <a class="pagination__link pagination__link--next" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
-  {% endif %}
+    {% for page in (1..paginator.total_pages) %}
+        {% if page == paginator.page %}
+        <em class="pagination__link pagination__link--current">{{ page }}</em>
+        {% elsif page == 1 %}
+        <a class="pagination__link pagination__link--current" href="{{ '/insights' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+        {% else %}
+        <a class="pagination__link pagination__link--current" href="{{ '/insights/' | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
+        {% endif %}
+    {% endfor %}
+    {% if paginator.next_page %}
+        <a class="pagination__link pagination__link--next" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+    {% endif %}
 </section>
 {% endif %}
