--- a/assets/sass/components/_article-listing.scss
+++ b/assets/sass/components/_article-listing.scss
@@ -1,22 +1,37 @@
 // insights page
 .article-listing {
 
-	.snippet {
-		top: 200px;
-
-		&--reveal {
-			animation-name: reveal-article;
-	        animation-duration: .8s;
-	        animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
-	        animation-direction: normal;
-	        animation-iteration-count: 1;
-	        animation-fill-mode: forwards;
-		}
-	}
-
 	&__featured {
-		border-bottom: solid 1px #ccc;
-		padding: 0 0 40px 0;
+		// border-bottom: solid 1px #ccc;
+		padding-bottom: 80px;
+
+		// these are overrides. defaults are set in _article-snippet.scss
+		.snippet {
+			min-height: 60vh;
+			padding: 40px 40px 0 40px;
+			display: flex;
+			flex-direction: column;
+			flex-wrap: nowrap;
+			justify-content: flex-end;
+
+			&__title {
+				margin: 0 0 40px 0;
+				font-size: 55px;
+				width: 70%;
+			}
+
+			&__link {
+				padding: 5px 10px 5px 10px;
+			    box-decoration-break: clone;
+			    background-color: white;
+			}
+
+			&__meta {
+			    padding: 0 10px;
+			    width: fit-content;
+				background-color: $hbc-white;
+			}
+		}
 	}
 
 	&__sub-featured {
@@ -24,11 +39,11 @@
 		grid-template-columns: repeat(2, 1fr);
 		grid-auto-rows: minmax(100px, auto);
 		border-bottom: solid 1px #ccc;
-		padding: 40px 0;
+		padding-bottom: 80px;
 		margin-bottom: 40px;
 
 		.snippet {
-			padding: 40px 40px 40px 0;
+			padding: 20px 40px;
 
 			&:first-child {
 				border-right: solid 1px #ccc;
@@ -52,19 +67,19 @@
 	    ;
 		align-items: start;
 		border-bottom: solid 1px #ccc;
-		padding: 20px 0 40px 0;
+		padding: 40px 0 40px 0;
 
 		.featured-topics {
 			grid-area: ft;
-			height: 100%;
 			border-right: solid 1px #ccc;
 			margin-right: 40px;
+			margin-left: 40px;
 			position: sticky;
 			top: 100px;
 
 			&__title {
-				padding: 0;
-				margin: 15px 0;
+				padding-right: 20px;
+				margin: 0 0 15px 0;
 			}
 		}
 
@@ -73,7 +88,15 @@
 			padding: 10px 0 40px 20px;
 			grid-row: auto;
 			border-bottom: solid 1px #ccc;
-			margin-bottom: 40px;
+			margin-bottom: 40px;	
+
+			&:first-of-type {	
+				padding-top: 0;
+			}
+
+			&:last-child {
+				border-bottom: solid 0px #ccc;
+			}
 		}
 
 	}
