--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -2,7 +2,7 @@
     display: flex;
     float: right;
     width: 350px;
-    margin: 30px 30px 40px 0;
+    margin: 30px 30px 0 0;
     padding: 0;
     
     
