organized js assets

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.2.1.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/greensock/plugins/CSSPlugin.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/greensock/TweenLite.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/scrollmagic/ScrollMagic.min.js"></script>
