added random colors to article header

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,7 +11,7 @@ layout: default
         {% endif %}) 50% 50% / cover no-repeat;">
     </section>
     {% else %}
-    <section class="article__feature-image" style="background: linear-gradient(to bottom right, #ffe29a, rgba(236, 233, 233, 0))">
+    <section class="article__no-feature-image">
     </section>
     {% endif %}
     <section class="article__content">
