--- a/assets/sass/components/_article-snippet.scss
+++ b/assets/sass/components/_article-snippet.scss
@@ -1,15 +1,19 @@
 .snippet {
 	position: relative;
-	top: 200px;
-	opacity: 0;
 
-	&--reveal {
-		animation-name: reveal-article;
-		animation-duration: .8s;
-		animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
-		animation-direction: normal;
-		animation-iteration-count: 1;
-		animation-fill-mode: forwards;
+	@media screen and (min-width: $breakpoint-medium) {
+
+		top: 200px;
+		opacity: 0;
+
+		&--reveal {
+			animation-name: reveal-article;
+			animation-duration: .8s;
+			animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+			animation-direction: normal;
+			animation-iteration-count: 1;
+			animation-fill-mode: forwards;
+		}
 	}
 	
 
