--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -4,7 +4,9 @@
     width: 350px;
     margin: 30px 30px 0 0;
     padding: 0;
-    
+    -webkit-backface-visibility: hidden; /* add to fix webkit bug jitter */
+    -webkit-transform: perspective(1000px); /* add to fix webkit bug jitter */
+    transition: margin 200ms ease-out;
     
     &__link-item {
 	    flex-grow: 2;
@@ -100,6 +102,12 @@
         width: 90%;
         margin: 0 auto 20px auto;
 
+    }
+}
+
+.site-header--scaled {
+    .navigation {
+        margin: 13px 30px 0 0;
     }
 }
 
