added pagination styles

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,6 +21,7 @@
 @import '../sass/components/author-bio';
 @import '../sass/components/recirc';
 @import '../sass/components/article-snippet';
+@import '../sass/components/pagination';
 
 // pages
 @import '../sass/pages/homepage';
