--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -90,24 +90,4 @@ layout: default
 </section>
 {% endif %}
 
-<!-- Pagination links -->
-{% if paginator.total_pages > 1 %}
-<section class="pagination">
-    {% if paginator.previous_page %}
-        <a class="pagination__link pagination__link--prev" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
-    {% endif %}
-
-    {% for page in (1..paginator.total_pages) %}
-        {% if page == paginator.page %}
-        <em class="pagination__link pagination__link--current">{{ page }}</em>
-        {% elsif page == 1 %}
-        <a class="pagination__link pagination__link--current" href="{{ '/insights' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
-        {% else %}
-        <a class="pagination__link pagination__link--current" href="{{ '/insights/' | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
-        {% endif %}
-    {% endfor %}
-    {% if paginator.next_page %}
-        <a class="pagination__link pagination__link--next" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
-    {% endif %}
-</section>
-{% endif %}
+{% include pagination.html %}
