--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,6 +22,7 @@
 @import '../sass/components/recirc';
 @import '../sass/components/article-snippet';
 @import '../sass/components/pagination';
+@import '../sass/components/social-links';
 
 // pages
 @import '../sass/pages/homepage';
