--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -28,13 +28,10 @@ p {
 	// overflow: hidden;
 
 	// additional styles for post markdown elements
-	a, li > a {
-		line-height: 0;
-		color: inherit;
-	}
 }
-
-a {
+p a, 
+li a {
+	line-height: 0;
 	color: inherit;
 
 	&:hover {
@@ -46,13 +43,14 @@ h1 {
 	color: $hbc-black;
 }
 
-ul {
+p ~ ul {
 	margin-bottom: 40px;
 
 	li {
 		margin-bottom: 20px;
 	}
 }
+
 
 code {
 	font-size: inherit;
