--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -13,4 +13,18 @@
 	    display: flex;
 	    flex-direction: row-reverse;
 	}
+
+	@media screen and (max-width: $breakpoint-small) {
+		padding: 40px 0px 80px 0px;
+
+		.copyright {
+			text-align: center;
+		}
+
+		&__links {
+			display: block;
+			text-align: center;
+		}
+	}
 }
+
