--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -3,17 +3,10 @@
     max-height: 125px;
 	background-color: $hbc-off-white;
 	color: $hbc-black;
-    position: sticky;
-    top: 0;
     z-index: 100;
 	-webkit-backface-visibility: hidden; /* add to fix webkit bug jitter */
 	-webkit-transform: perspective(1000px); /* add to fix webkit bug jitter */
-    transition: all 200ms ease-out;
-
-    &--scaled {
-    	max-height: 65px;
-    	box-shadow: rgb(204, 204, 204) 0px 1px 3px;
-    }
+    transition: all 300ms ease-out;
 
 	&__logo {
 	    display: inline-block;
@@ -28,23 +21,42 @@
 		.hbc-tech-logo__hbc,
 		.hbc-tech-logo__tech {
 		    transition: transform 200ms ease-out;
-		    transform-origin: 0% 60%;
+			transform-origin: 0% 60%;
 		}
 
-		&--scaled {
-			margin: 10px 0 10px -50px;
-		    width: 160px;
-			// transform: scale(0.8);
-
-			.hbc-tech-logo__hbc,
-			.hbc-tech-logo__tech {
-				transform: scale(0);
-			}
-
-			.hbc-tech-logo__hbc {
-			    transform-origin: 100% 60%;
-			}
+		.hbc-tech-logo__hbc {
+			transform-origin: 100% 60%;
 		}
+	}
+
+	@media screen and (min-width: $breakpoint-medium) {
+
+		position: sticky;
+	    top: 0;
+
+	    &--scaled {
+	    	max-height: 65px;
+	    	box-shadow: rgb(204, 204, 204) 0px 1px 3px;	
+
+			.site-header__logo {
+				margin: 10px 0 10px -50px;
+			    width: 160px;
+				// transform: scale(0.8);
+
+				.hbc-tech-logo__hbc,
+				.hbc-tech-logo__tech {
+					transform: scale(0);
+				}
+
+				.hbc-tech-logo__hbc {
+				    transform-origin: 100% 60%;
+				}
+			}
+
+			.navigation {
+				margin: 12px 30px 0 0;
+			}
+	    }
 	}
 
 	.sticky-nav-meta {
@@ -90,10 +102,24 @@
 
 	
 
-    @media screen and (max-width: 1000px) {
-		.hbc-tech-logo {
-		    width: 140px;
-		    height: 50px;
+    @media screen and (max-width: $breakpoint-medium) {
+    	box-shadow: rgb(204, 204, 204) 0px 1px 3px;
+    	margin-bottom: 20px;
+		position: relative;
+
+    	.sticky-nav-meta {
+    		display: none;
+    	}
+
+		&__logo {
+			display: block;
+			text-align: center;
+			margin: 20px 0 0 0;
+
+			.hbc-tech-logo__hbc,
+			.hbc-tech-logo__tech {
+				transform: scale(0);
+			}
 		}
     }
 }
