--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -13,6 +13,7 @@
         list-style: none;
         text-align: center;
         height: 36px;
+        margin-bottom: 0;
 
         &:first-child {
             flex-grow: 1;
@@ -77,7 +78,8 @@
 	}
 
     &--footer {
-        margin: 20px;
+        float: none;
+        margin-top: 20px;
     }
 
     @media screen and (max-width: $breakpoint-medium) {
@@ -87,11 +89,3 @@
 
     }
 }
-
-.site-header--scaled {
-    .navigation {
-        margin: 13px 30px 0 0;
-    }
-}
-
-
