--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -7,7 +7,7 @@ layout: default
 <!-- this is the rest of the posts listed with no feature images-->
 <section class="article-listing">
     <div class="article-listing__remaining">
-    <aside class="featured-topics"><h3 class="featured-topics__title">Featured Topics</h3></aside>
+    {% include featured-topics.html %}
     {% for post in paginator.posts %}
           {% include article-snippet.html excerpt=true featureImage=false %}
     {% endfor %}
@@ -82,13 +82,7 @@ layout: default
     </div>
     <!-- this is the rest of the posts listed with no feature images-->
     <div class="article-listing__remaining">
-    <aside class="featured-topics"><h3 class="featured-topics__title">Featured Topics</h3>
-        <ul class="featured-topics__list">
-            {% for cat in site.category %}
-              <li class="featured-topics__list-item"><a class="featured-topics__list-item__link" href="{{ cat.name }}">{{ cat.name | capitalize }}</a></li>
-            {% endfor %}
-        </ul>
-    </aside>
+    {% include featured-topics.html %}
     {% for post in paginator.posts offset:3 limit:8 %}
           {% include article-snippet.html excerpt=true featureImage=false %}
     {% endfor %}
