--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,27 +1,29 @@
 <section class="categories-page">
 	<h1 class="categories-page__title">Categories</h1>
-	<ul class="categories-page__category-list">
-	{% assign categories_list = site.categories %}
-	  {% if categories_list.first[0] == null %}
-	    {% for category in categories_list %}
-	      <li class="categories-page__list-item"><a class="categories-page__list-item__link" href="#{{ category }}">{{ category | capitalize }} ({{ site.tags[category].size }})</a></li>
-	    {% endfor %}
-	  {% else %}
-	    {% for category in categories_list %}
-	      <li class="categories-page__list-item"><a class="categories-page__list-item__link" href="#{{ category[0] }}">{{ category[0] | capitalize }} ({{ category[1].size }})</a></li>
-	    {% endfor %}
-	  {% endif %}
-	{% assign categories_list = nil %}
-	</ul>
-
+	<aside class="categories">
+		<ul class="categories__list">
+		{% assign categories_list = site.categories %}
+		  {% if categories_list.first[0] == null %}
+		    {% for category in categories_list %}
+		      <li class="categories__list-item"><a class="categories__list-item__link" href="#{{ category }}">{{ category | capitalize }} ({{ site.tags[category].size }})</a></li>
+		    {% endfor %}
+		  {% else %}
+		    {% for category in categories_list %}
+		      <li class="categories__list-item"><a class="categories__list-item__link" href="#{{ category[0] }}">{{ category[0] | capitalize }} ({{ category[1].size }})</a></li>
+		    {% endfor %}
+		  {% endif %}
+		{% assign categories_list = nil %}
+		</ul>
+	</aside>
+	<section class="articles">
 	{% for tag in site.categories %}
-	  <a name="{{ tag[0] }}"><h2 class="categories-page__list-header">{{ tag[0] | capitalize }}</h2></a>
-	  <ul class="categories-page__article-list">
+	  <a name="{{ tag[0] }}"><h2 class="articles__list-header">{{ tag[0] | capitalize }}</h2></a>
+	  <ul class="articles__list">
 	    {% assign pages_list = tag[1] %}
 	    {% for article in pages_list %}
 	      {% if article.title != null %}
 	      {% if group == null or group == article.group %}
-	      <li class="categories-page__list-item"><a class="categories-page__list-item__link"href="{{ site.url }}{{ site.baseurl }}{{ article.url }}">{{ article.title }}<span class="entry-date"><time datetime="{{ article.date | date_to_xmlschema }}" itemprop="datePublished">{{ article.date | date: "%B %d, %Y" }}</time></span></a></li>
+	      <li class="articles__list-item"><a class="articles__list-item__link"href="{{ site.url }}{{ site.baseurl }}{{ article.url }}">{{ article.title }}<span class="entry-date"><time datetime="{{ article.date | date_to_xmlschema }}" itemprop="datePublished">{{ article.date | date: "%B %d, %Y" }}</time></span></a></li>
 	      {% endif %}
 	      {% endif %}
 	    {% endfor %}
@@ -29,4 +31,5 @@
 	    {% assign group = nil %}
 	  </ul>
 	{% endfor %}
+	</section>
 </section>
