--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -1,4 +1,5 @@
 .article {
+	padding: 0 10px;
 
 	&__feature-image,
 	&__no-feature-image {
@@ -6,26 +7,38 @@
 		position: absolute;
 		left: 0;
 		width: 100vw;
-		height: 413px;
+		height: 40vw;
 		z-index: -1;
-		clip-path: polygon(0% 4vw, 0% 4vw, 0% 100%, 0% 100%);
-        animation-name: reveal-feature-image;
-        animation-duration: .2s;
-        animation-delay: .5s;
-        animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
-        animation-direction: normal;
-        animation-iteration-count: 1;
-        animation-fill-mode: forwards;
+		clip-path: polygon(0% 4vw, 100% 0%, 100% 0%, 0% 4vw);
+	    background-color: $hbc-yellow;
+	}
+
+	&__no-feature-image {
+        box-shadow: inset 0px -540px 20000px 40px white;
+	    transform: scaleX(1.2);
+        animation-name: reveal-feature-image, color-animation;
+        animation-duration: 0.15s, 20s;
+        animation-delay: 0.4s, 0s;
+        animation-timing-function: linear, linear;
+        animation-direction: normal, normal;
+        animation-iteration-count: 1, infinite;
+        animation-fill-mode: forwards, forwards;
 	}
 
 	&__feature-image {
+        animation-name: reveal-feature-image;
+        animation-duration: 0.15s;
+        animation-delay: 0.4s;
+        animation-timing-function: ease-out;
+        animation-direction: normal;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
 
 		&:after {
 			content: "";
 			display: block;
 			height: 100%;
 			width: 100%;
-			// background: linear-gradient(to bottom right, rgba(189, 52, 52, 0.9), rgba(0,0,0, 0.5));
 			mix-blend-mode: soft-light;
 			background-color: rgba(210, 0, 0, 0.8);
 		}
@@ -47,16 +60,15 @@
 		align-items: start;
 		position: relative;
 		padding: 60px 0 90px 0;
-		margin-top: 200px;
+		margin-top: 150px;
 		opacity: 0;
         top: 200px;
 		background-color: $hbc-white;
 		clip-path: polygon(0% 0%, 100% 4vw, 100% 100%, 0% 100%);
-
         animation-name: reveal-article;
         animation-duration: .2s;
-        animation-delay: .8s;
-        animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+        animation-delay: .5s;
+        animation-timing-function: cubic-bezier(0.000, 0.870, 1.000, 1.015); 
         animation-direction: normal;
         animation-iteration-count: 1;
         animation-fill-mode: forwards;	
@@ -123,7 +135,6 @@
 			top: 60vh;
 
 			.share-buttons {
-				// border-top: solid 1px $hbc-border;
 				list-style-type: none;
 				padding: 20px 0 0 0;
 				margin: 0;
@@ -154,11 +165,8 @@
 				        animation-iteration-count: 1;
 				        animation-fill-mode: forwards;
 					}
-
 				}
-
 			}
-
 		}
 
 		&__body {
@@ -200,10 +208,17 @@
 	}
 
 
-
 	@media screen and (max-width: $breakpoint-medium) {
+
+		&__no-feature-image {
+	        animation-name: reveal-feature-image--mobile, color-animation;
+            animation-duration: 0.5s, 20s;
+	        animation-delay: 0s, 0.5s;
+	    }
+
 		.article__content {
 			padding-top: 30px;
+			margin-top: 50px;
 			grid-template-columns: 10px 20px 1fr 10px;
 		    grid-template-areas:
 			    ". meta meta ."
@@ -212,7 +227,8 @@
 			    ". body body . "
 			    "share share share share"
 			    "share share share share"
-			    ". footer footer . ";
+			    ". footer footer . "
+			;
 
 		    &__title {
 				font-size: 36px;
@@ -229,22 +245,19 @@
 			}
 
 			&__share-buttons {
-				bottom: 0px;
 				width: 100vw;
+				position: relative;
+			    top: auto;
 
 				.share-buttons {
-					display: block;
 					background-color: #fff;				
 					width: 100%;
-					height: 73px;
-					padding: 20px;
 
 					&__link-item {
-						margin: 0 10px 10px 0;
+						margin: 0 0 0 10px;
 						float: left;
 						opacity: 1;
 					}
-
 				}
 			}
 
