adding recirc to categories

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -47,7 +47,7 @@ layout: default
 </article>
 <aside class="recirc">
     <h2 class="header__title">More Insights</h2>
-    <a class="header__view-all-link" href="{{ site.url }}{{ site.baseurl }}/insights/index.html">Explore</a>
+    <a class="header__view-all-link" href="{{ site.url }}{{ site.baseurl }}/categories/index.html">Explore Categories</a>
     <div class="recirc__articles">
     {% assign counter = 0 %}
     {% assign maxPosts = 4 %}
