--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
 <header id="site-header" class="site-header" >
 	<a class="site-header__logo" href="{{ site.url }}{{ site.baseurl }}/">
-		<svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg">
-	        <use class="hbc-tech-logo__hbc" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc" ></use>
-	        <use class="hbc-tech-logo__beaver" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#beaver" ></use>
-	        <use class="hbc-tech-logo__tech" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#tech" ></use>
-	        <use class="hbc-tech-logo__beta" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#beta" ></use>
+	    <svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg">
+	        <use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo" ></use>
 	    </svg>
 	</a>
 	<p class="sticky-nav-meta">
