--- a/assets/sass/components/_recirc.scss
+++ b/assets/sass/components/_recirc.scss
@@ -45,13 +45,13 @@
 			position: relative;
 
 			&:first-child {
-				border-right: solid 1px #ccc;
-				border-bottom: solid 1px #ccc;
+				border-right: solid 1px $hbc-border;
+				border-bottom: solid 1px $hbc-border;
 			}	
 
 			&:last-child {
-				border-left: solid 1px #ccc;
-				border-top: solid 1px #ccc;
+				border-left: solid 1px $hbc-border;
+				border-top: solid 1px $hbc-border;
 				margin-left: -1px;
 				margin-top: -1px;
 				padding-left: 40px;
@@ -81,12 +81,12 @@
 			grid-template-columns: 1fr;
 
 			&__item {
-				border: solid 0px #ccc;
-				border-bottom: solid 1px #ccc;
+				border: solid 0px $hbc-border;
+				border-bottom: solid 1px $hbc-border;
 				padding: 40px 0 40px 0;
 
 				&:first-child {
-					border-right: solid 0px #ccc;
+					border-right: solid 0px $hbc-border;
 				}	
 
 				&:last-child {
