--- a/assets/sass/components/_article-listing.scss
+++ b/assets/sass/components/_article-listing.scss
@@ -2,7 +2,7 @@
 .article-listing {
 
 	&__featured {
-		// border-bottom: solid 1px #ccc;
+		// border-bottom: solid 1px $hbc-border;
 		padding-bottom: 80px;
 
 		// these are overrides. defaults are set in _article-snippet.scss
@@ -40,7 +40,7 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-auto-rows: minmax(100px, auto);
-		border-bottom: solid 1px #ccc;
+		border-bottom: solid 1px $hbc-border;
 		padding-bottom: 80px;
 		margin-bottom: 40px;
 
@@ -48,7 +48,7 @@
 			padding: 20px 40px;
 
 			&:first-child {
-				border-right: solid 1px #ccc;
+				border-right: solid 1px $hbc-border;
 			}	
 
 			&:last-child {
@@ -72,7 +72,7 @@
 
 		.featured-topics {
 			grid-area: ft;
-			border-right: solid 1px #ccc;
+			border-right: solid 1px $hbc-border;
 			margin-right: 40px;
 			margin-left: 40px;
 			position: sticky;
@@ -115,7 +115,7 @@
 			grid-area: art;
 			padding: 10px 0 40px 0px;
 			grid-row: auto;
-			border-bottom: solid 1px #ccc;
+			border-bottom: solid 1px $hbc-border;
 			margin-bottom: 40px;	
 
 			&:first-of-type {	
@@ -124,7 +124,7 @@
 			}
 
 			&:last-child {
-				border-bottom: solid 0px #ccc;
+				border-bottom: solid 0px $hbc-border;
 			}
 		}
 
@@ -171,11 +171,11 @@
 			.snippet {
 				padding: 20px 0;
 			    margin-bottom: 20px;
-			    border-bottom: solid 1px #ccc;
+			    border-bottom: solid 1px $hbc-border;
 
 			    &:first-child {
 					padding-top: 40px;
-				    border-top: solid 1px #ccc;
+				    border-top: solid 1px $hbc-border;
 			    }
 
 				&:first-child,
@@ -212,8 +212,8 @@
 				order: 2;
 				width: 100%;
 				padding: 0 0 20px 0;
-				border-right: solid 0 #ccc;
-				border-top: solid 1px #ccc;
+				border-right: solid 0 $hbc-border;
+				border-top: solid 1px $hbc-border;
 				margin: 0;
 		    }
 		}	
