--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -3,15 +3,24 @@
 	color: lighten($hbc-black, 50%);
 	padding: 40px 40px 80px 40px;
 	border-top: solid 1px $hbc-border;
+	display: flex;
 
 	.copyright {
 		text-align: right;
 		font-size: 16px;
+		width: 100%;
 	}
 
 	&__links {
-	    display: flex;
+		display: flex;
 	    flex-direction: row-reverse;
+	    flex-wrap: wrap;
+	    width: 100%;
+	}
+
+	.hbc-stripes-logo {
+		height: 25px;
+		width: 25px;
 	}
 
 	@media screen and (max-width: $breakpoint-small) {
@@ -25,6 +34,11 @@
 			display: block;
 			text-align: center;
 		}
+
+		.hbc-stripes-logo {
+			display: none;
+		}
 	}
+
 }
 
