--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -6,26 +6,16 @@
     z-index: 100;
 	-webkit-backface-visibility: hidden; /* add to fix webkit bug jitter */
 	-webkit-transform: perspective(1000px); /* add to fix webkit bug jitter */
-    transition: all 300ms ease-out;
+    transition: all 0ms ease-out;
 
 	&__logo {
 	    display: inline-block;
-	    margin: 20px 0 20px 30px;
-	    transition: all 200ms ease-out;
+	    margin: 20px 20px 0 20px;
 
 		.hbc-tech-logo {
-		    width: 210px;
-		    height: 50px;
-		}
-
-		.hbc-tech-logo__hbc,
-		.hbc-tech-logo__tech {
-		    transition: transform 200ms ease-out;
-			transform-origin: 0% 60%;
-		}
-
-		.hbc-tech-logo__hbc {
-			transform-origin: 100% 60%;
+		    width: 100px;
+		    height: 100px;
+	        transition: all 200ms ease-out;
 		}
 	}
 
@@ -35,22 +25,17 @@
 	    top: 0;
 
 	    &--scaled {
+    	    transition: all 300ms ease-out;
 	    	max-height: 65px;
-	    	box-shadow: rgb(204, 204, 204) 0px 1px 3px;	
+	    	box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;	
 
-			.site-header__logo {
-				margin: 10px 0 10px -50px;
-			    width: 160px;
-				// transform: scale(0.8);
+	    	.site-header__logo {
+			    margin: 10px 20px 0 20px;
+	    	}
 
-				.hbc-tech-logo__hbc,
-				.hbc-tech-logo__tech {
-					transform: scale(0);
-				}
-
-				.hbc-tech-logo__hbc {
-				    transform-origin: 100% 60%;
-				}
+			.hbc-tech-logo {
+			    width: 50px;
+			    height: 50px;
 			}
 
 			.navigation {
@@ -62,7 +47,7 @@
 	.sticky-nav-meta {
 		display: inline-block;
 	    position: relative;
-	    top: -20px;
+	    top: -24px;
 	    opacity: 0;
 		transition: opacity 200ms ease-in, transform 200ms ease-out;
     	transform: translateX(20px);
@@ -114,9 +99,9 @@
 			text-align: center;
 			margin: 20px 0 0 0;
 
-			.hbc-tech-logo__hbc,
-			.hbc-tech-logo__tech {
-				transform: scale(0);
+			.hbc-tech-logo {
+			    width: 50px;
+			    height: 50px;
 			}
 		}
     }
