--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -78,8 +78,7 @@
 	}
 
     &--footer {
-        float: none;
-        margin-top: 20px;
+        margin: -5px 30px 0 0;
     }
 
     @media screen and (max-width: $breakpoint-medium) {
