added hbc-stripes to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,13 @@
 <footer class="footer">
 	<svg class="hbc-stripes-logo" xmlns="http://www.w3.org/2000/svg">
-		<use class="hbc-stripes-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-stripes-logo" ></use>
+		<use class="hbc-stripe hbc-stripe--green" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-green" ></use>
+		<use class="hbc-stripe hbc-stripe--red" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-red" ></use>
+		<use class="hbc-stripe hbc-stripe--yellow" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-yellow" ></use>
+		<use class="hbc-stripe hbc-stripe--blue" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-blue" ></use>
 	</svg>
+<!-- 	<svg class="arrow-box" xmlns="http://www.w3.org/2000/svg">
+        <use class="arrow" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#arrow-box"></use>
+    </svg> -->
 	<section class="footer__links">
 		{% include social-links.html %}
 		<ul class="navigation navigation--footer">
