--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
     grid-area: hd;
-    max-height: 125px;
+    max-height: 150px;
 	background-color: $hbc-off-white;
 	color: $hbc-black;
     z-index: 100;
@@ -10,7 +10,7 @@
 
 	&__logo {
 	    display: inline-block;
-	    margin: 20px 20px 0 20px;
+	    margin: 30px 20px 20px 40px;
 
 		.hbc-tech-logo {
 		    width: 100px;
@@ -60,13 +60,10 @@
 	    .meta {
 	    	&__category {
 				text-transform: uppercase;
-				text-decoration: none;
 				color: $hbc-highlight;
 			    font-size: 15px;
 
-				&:hover {
-					text-decoration: underline;
-				}
+				@include special-text-link();
 			}
 
 			&__title {
